Fixed overalapping with footer.
Add correct path for shell provisioner.

Revert "Add correct path for shell provisioner."

This reverts commit 253accc762c56658e075576b5f16f748767a745b.

Revert "Fixed overalapping with footer."

This reverts commit bfbf79878a52997948f67ed6a8fcda71885372be.

Fix overlapping footer problem.

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -15,7 +15,7 @@
 
 .board .btn-success {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     background: #4CAF50;
 }
 
@@ -206,9 +206,14 @@ textarea {
     text-align: center;
     width: 100%;
     padding: 10px;
+    margin-top: 10px;
     bottom: 0px;
     border-top: 1px solid #bfbfbf;
     background-color: #f9f9f9;
+}
+
+#json {
+    margin-bottom: 50px;
 }
 
 .options {
