Add color change option of details in badges
Add `do_text_fill` function

Add static color picker functionality for text-fill

Allow text-fill option

Now one can change text color on badges when needed.

Changes done in back-end and front-end folder to add text color option

Help in heroku deploy

removed spaces for proper indentation of badge details

Revert "Help in heroku deploy"

This reverts commit a9255457aa09f6d698ea7171c9090bda561a88d7.

Revert "Allow text-fill option"

This reverts commit 03d603ffe2cb70e3ee6f9c60bbb5df1bdb29fe88.

Revert "Add static color picker functionality for text-fill"

This reverts commit 87d1a599bd9f9f2874536be7d17131d2e4ab19cf.

Revert "Add `do_text_fill` function"

This reverts commit ca42327ff7a29105429a8cdaf8fb22fd373267d0.

Revert "Remove spaces to correct indent of text in badges"

This reverts commit 3e530999864777046ecd4e34e80ce4e2d2cd3fc1.

Remove modifications in js files in backend folder.

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -90,7 +90,7 @@
                             </li>
                         </ul>
                         <div id="error" class="no-image-error">Please select a default background or upload an image!</div>
-                        <label>Choose your font</label>
+                        <label>Customize text</label>
                         <ul style="list-style-type:none">
                             <li><input type="radio" name="fontsource" id="custfont">&nbsp;Use Custom font</li>
                             <section id="custom-font" style="display:none">
@@ -109,6 +109,16 @@
                                 </div>
                             </section>
                             <input type="hidden" name="custfont" value="">
+                            <li>
+                            <li>
+                                <input type="radio" name="backsource" id="text-color"> Choose Text Color</li>
+                                <section id="text-fill-input" style="display:none">
+                                    <label for="inputFile"></label>
+                                    <div>
+                                        <input type="text" id="text-picker" class="form-control" name="txt_color">                                     
+                                    </div>
+                                </section>
+                            </li>
                         </ul>
                         <button type="submit" disabled="disabled" class="btn btn-block submit-btn">Generate Badges</button>
                         <button type="button" disabled="disabled" class="btn btn-block btn-warning" id="preview-btn">Preview</button>
