Use checkbox instead of radio for custom font
Closes #532

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -92,7 +92,7 @@
                         <div id="error" class="no-image-error">Please select a default background or upload an image!</div>
                         <label>Customize text</label>
                         <ul style="list-style-type:none">
-                            <li><input type="radio" name="fontsource" id="custfont">&nbsp;Use Custom font</li>
+                            <li><input type="checkbox" name="fontsource" id="custfont">&nbsp;Use Custom font</li>
                             <section id="custom-font" style="display:none">
                                 <label for="inputFile">Select from following fonts</label>
                                 <div class="btn-group">
@@ -115,7 +115,7 @@
                                 <section id="text-fill-input" style="display:none">
                                     <label for="inputFile"></label>
                                     <div>
-                                        <input type="text" id="text-picker" class="form-control" name="txt_color">                                     
+                                        <input type="text" id="text-picker" class="form-control" name="txt_color">
                                     </div>
                                 </section>
                             </li>
