Use checkbox for font color option
Fixes #543

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -111,7 +111,7 @@
                             <input type="hidden" name="custfont" value="">
                             <li>
                             <li>
-                                <input type="radio" name="backsource" id="text-color"> Choose Text Color</li>
+                                <input type="checkbox" name="fontsource" id="text-color"> Choose Text Color</li>
                                 <section id="text-fill-input" style="display:none">
                                     <label for="inputFile"></label>
                                     <div>
