changes removed form v1

--- a/v1/app/templates/guide.html
+++ b/v1/app/templates/guide.html
@@ -15,15 +15,15 @@
         </div>
         <div class="col-sm-12 text-left options" id="csv">
             <h2>1. CSV Format</h2>
-            <pre class="alert-info">The CSV must be uploaded with 5 columns of data</pre>
-            <p>Five comma (',') seperated values should be present in the CSV</p>
+            <pre class="alert-info">The CSV must be uploaded with 4 columns of data</pre>
+            <p>Four comma (',') seperated values should be present in the CSV</p>
             <p>See Example Image Below</p>
             <img src="static/images/guide_csv.png" class="guide_img" alt="CSV Image">
         </div>
         <div class="col-sm-12 text-left options" id="manual">
             <h2>2. Manual Data Format</h2>
             <pre class="alert-info">Format for Manual data is same as CSV's data</pre>
-            <p>Five comma (',') seperated values on each line is the correct format</p>
+            <p>Four comma (',') seperated values on each line is the correct format</p>
             <p>See Image below</p>
             <img src="static/images/guide_manual.png" class="guide_img" alt="Manual Data Image">
         </div>
