add locationType as hash

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -7,7 +7,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                         <label>
                             Choose your Data Source&emsp;
-                            <a id="icon" href="/guide" target="_blank"><i class="fa fa-info-circle"></i></a>
+                            <a id="icon" href="/#/guide" target="_blank"><i class="fa fa-info-circle"></i></a>
                         </label>
                         <ul style="list-style-type:none">
                             <li><input name="datasource" type="radio" id="csvupload">&nbsp;Add CSV file</li>
@@ -27,7 +27,7 @@
                                     </div>
                                     <div id="error" class="csv-error">Please fill data in proper format
                                         <div class="text-center guide">
-                                            <a href="/guide" target="_blank">User Input Guide</a>
+                                            <a href="/#/guide" target="_blank">User Input Guide</a>
                                         </div>
                                     </div>
                                 </section>
