--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,7 +1,7 @@
 <div class="container board">
     <div class="row">
         <!-- TODO: Replace action with url for backend -->
-        <form id="form1" action="" method="post" enctype="multipart/form-data" onsubmit="return validate()">
+        <form id="form1" action="http://badgeyay-api.herokuapp.com/api/v1.0/generate_badges" method="post" enctype="multipart/form-data" onsubmit="return validate()">
             <div class="row">
                 <div class="container board">
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
