Rename uploads in backend to something meaningfull #578

--- a/v1/app/templates/index.html
+++ b/v1/app/templates/index.html
@@ -47,7 +47,7 @@
 										<ul class="dropdown-menu">
 											{% for i in default_background %}
 											<li class="menu-options" data-item="{{i}}">
-												<img src="static/uploads/{{i}}"> {{i}}
+												<img src="static/badge_backgrounds/{{i}}"> {{i}}
 											</li>
 											{% endfor %}
 										</ul>
