--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -202,7 +202,7 @@ textarea {
 }
 
 #footer {
-    position: fixed;
+    position: relative;
     text-align: center;
     width: 100%;
     padding: 10px;
