--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -6,9 +6,9 @@
     top:3px;
 }
 
-.col-md-12 {
+.foooter {
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     padding-bottom: 20px;
 }
 
