--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -6,9 +6,8 @@
     top:3px;
 }
 
-.foooter {
-    margin-top: 10px;
-    margin-bottom: 20px;
+.footer {
+    margin: 10px 0 20px 0;
     padding-bottom: 20px;
 }
 
