--- a/frontend/app/templates/guide.hbs
+++ b/frontend/app/templates/guide.hbs
@@ -1,6 +1,6 @@
 <div class="container board">
     <div class="row">
-        <div class="col-md-12 foooter">
+        <div class="col-md-12 footer">
             <div class="jumbotron text-center">
                 <h1>Badgeyay User-Input Guide</h1>
             </div>
