--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -164,6 +164,7 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="{{rootURL}}js/jquery.minicolors.min.js"></script>
+<script language="JavaScript"  src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
 <script src="{{rootURL}}js/script.js"></script>
 <script src="{{rootURL}}js/form.js"></script>
 
