--- a/frontend/app/templates/guide.hbs
+++ b/frontend/app/templates/guide.hbs
@@ -7,8 +7,8 @@
             <div class="col-sm-12 text-center">
                 <p>Want to learn what is the "Correct Format"?</p>
                 <p>Check
-                    <a href="#csv">CSV</a>,
-                    <a href="#manual">Manual Data</a>,
+                    <span>CSV</span>,
+                    <span>Manual Data</span>
                 </p>
             </div>
             <div class="col-sm-12 text-left options" id="csv">
@@ -29,4 +29,13 @@
     </div>
 </div>
 
+<div id="footer">
+        <span> <strong>Version: </strong></span>
+        <span> <a class="version"></a></span>
+</div>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="{{rootURL}}js/jquery.minicolors.min.js"></script>
+<script language="JavaScript"  src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
 <script src="{{rootURL}}js/script.js"></script>
+<script src="{{rootURL}}js/form.js"></script>
