--- a/frontend/app/templates/signup.hbs
+++ b/frontend/app/templates/signup.hbs
@@ -1,26 +1,55 @@
 <div class="ui middle aligned center aligned grid">
-    <div class="column">
-        <h2 class="ui teal image header">
-        <div class="content">
-            Sign Up
+    <div class="row">
+        <div class="column">
+            <h2 class="ui teal image header">
+                <div class="content">
+                    Sign Up
+                </div>
+            </h2>
+            <form class="ui form">
+                <div class="ui stacked element">
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <i class="user icon"></i>
+                            {{input type="text" value=email name="email" placeholder="E-mail address"}}
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <i class="lock icon"></i>
+                            {{input type="password" value=password name="password" placeholder="Password"}}
+                        </div>
+                    </div>
+                    <button class="ui button teal fluid" {{ action 'signIn' }}>Sign Up</button>
+                </div>
+            </form>
+            <div class="ui divider"></div>
         </div>
-        </h2>
-        <form class="ui form">
-            <div class="ui stacked element">
-                <div class="field">
-                    <div class="ui left icon input">
-                        <i class="user icon"></i>
-                        {{input type="text" value=email name="email" placeholder="E-mail address"}}
-                    </div>
+    </div>
+    <div class="three column row">
+        <div class="column">
+            <div class="ui vertical animated red button fluid">
+                <div class="hidden content">Google</div>
+                <div class="visible content">
+                    <i class="google plus icon"></i>
                 </div>
-                <div class="field">
-                    <div class="ui left icon input">
-                        <i class="lock icon"></i>
-                        {{input type="password" value=password name="password" placeholder="Password"}}
-                    </div>
-                </div>
-                <button class="ui button teal fluid" {{ action 'signIn' }}>Sign Up</button>
             </div>
-        </form>
+        </div>
+        <div class="column">
+            <div class="ui vertical animated violet button fluid" tabindex="0">
+                <div class="hidden content">Facebook</div>
+                <div class="visible content">
+                    <i class="facebook f icon"></i>
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="ui vertical animated blue button fluid" tabindex="0">
+                <div class="hidden content">Twitter</div>
+                <div class="visible content">
+                    <i class="twitter icon"></i>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
