--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,18 +1,10 @@
 <div class="ui menu">
   {{#link-to 'index' class="header item"}}
-    <h3 class="">Badgeyay</h3>
+    <h2 class="">Badgeyay</h2>
   {{/link-to}}
-  <div class="ui category search item" style="width: 20%">
-    <div class="ui transparent icon input">
-      <input class="prompt" type="text" placeholder="Search Badges..." style="border-radius: 0;">
-      <i class="search link icon"></i>
-    </div>
-    <div class="results"></div>
-  </div>
   <div class="right menu">  
     <div class="item">
-        <div class="ui green button" style="text-transform: uppercase; font-weight: 400">Create Badges</div>&nbsp;
-        <div class="ui yellow button" style="text-transform: uppercase; font-weight: 400">Login</div>
+        <div class="ui orange button" style="text-transform: uppercase; font-weight: 400">Login</div>
     </div>
   </div>
 </div>
