--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,15 +1,2 @@
-.pusher {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.main-container {
-  flex: 1;
-  padding-bottom: 12px;
-}
-
-footer {
-  padding-bottom: 30px;
-  padding-top: 30px;
-}
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300'); // sass-lint:disable-line no-url-domains,no-url-protocols
+@import "partials/all";
