--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -1,38 +1,33 @@
 <div class="ui center aligned container">
   <div class="ui stackable inverted divided grid">
-    <div class="three wide column">
+    <div class="four wide column">
       <div class="ui inverted link list">
         <strong class="item">Use Badgeyay</strong>
         <a class="item" href="#" target="_blank">Sitemap</a>
       </div>
     </div>
-    <div class="three wide column">
+    <div class="four wide column">
       <div class="ui inverted link list">
         <strong class="item">Categories</strong>
       </div>
     </div>
-    <div class="three wide column">
+    <div class="four wide column">
       <div class="ui inverted link list">
-        <strong class="item">Locations</strong>
+        <strong class="item">Shipping Locations</strong>
         <a class="item" href="#">India</a>
-        <a class="item" href="#">Singapore</a>
         <a class="item" href="#">Berlin</a>
         <a class="item" href="#">Mexico</a>
         <a class="item" href="#">New York</a>
+        <a class="item" href="#">Singapore</a>
         <a class="item" href="#">Hong Kong</a>
       </div>
     </div>
-    <div class="three wide column">
-      <div class="ui inverted link list">
-        <strong class="item">Nearby Events</strong>
-      </div>
-    </div>
-    <div class="three wide column">
+    <div class="four wide column">
       <div class="ui inverted link list">
         <strong class="item">Follow us on</strong>
-        <a class="item" href="#" target="_blank">Facebook</a>
         <a class="item" href="https://twitter.com/badgeyay" target="_blank">Twitter</a>
         <a class="item" href="https://github.com/fossasia/badgeyay" target="_blank">Github</a>
+        <a class="item" href="#" target="_blank">Facebook</a>
       </div>
     </div>
   </div>
