Add Logout action for the Logged In user

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="pusher">
-    {{nav-bar}}
+    {{nav-bar session=session}}
     {{#if (eq currentRouteName 'index')}}
       {{welcome-header}}
     {{/if}}
