Add Signup feature through Email in frontend

--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -29,7 +29,7 @@
                                     {{input type="password" name="password_repeat" placeholder="Re-enter Password"}}
                                 </div>
                             </div>
-                            <button class="ui fluid large orange submit button" style="margin-bottom: 10px;" {{ action 'signup' }}>Sign Up</button>
+                            <button class="ui fluid large orange submit button" style="margin-bottom: 10px;" {{ action 'signUp' }}>Sign Up</button>
                             <div class="ui divider"></div>
                             <a href="{{href-to 'login'}}" class="text muted weight-800">Already have an account? Log in</a>
                         </div>
