--- a/frontend/app/templates/signup.hbs
+++ b/frontend/app/templates/signup.hbs
@@ -1,5 +1,5 @@
 <div class="ui one column container stackable doubling centered grid">
   <div class="column">
-    {{forms/signup-form}}
+    {{forms/signup-form signUp=(action 'signUp')}}
   </div>
 </div>
