Add Text customization components (#833)
<!-- Add the issue number that is fixed by this PR (In the form Fixes #123) -->
Fixes #832 
Fixes #629 
#### Checklist

- [x] I have read the [Contribution & Best practices Guide](https://blog.fossasia.org/open-source-developer-guide-and-best-practices-at-fossasia) and my PR follows them.
- [x] My branch is up-to-date with the Upstream `development` branch.
- [x] I have added necessary documentation (if appropriate)

### Preview Link 

- **Replace XXX with your PR no**
- Link to live demo: http://pr-833-fossasia-badgeyay.surge.sh  

#### Changes proposed in this pull request:

- Add Text customization components.

![image](https://user-images.githubusercontent.com/24358501/40473881-15b26e2a-5f5b-11e8-9dab-02cd9b94f0f6.png)

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -31,6 +31,24 @@
                 {{ background-component/image-component }}
             </div>
         </div>
-    </div>
+  </div>
+  <div class="ui raised segment">
+        <div class="ui form width-container">
+            <div class="center aligned column">
+                {{ text-component/font-type }}
+            </div>
+            <div class="ui horizontal divider">
+                Or
+            </div>
+            <div class="center aligned column">
+                {{ text-component/font-color }}
+            </div>
+            <div class="ui horizontal divider">
+                Or
+            </div>
+            <div class="center aligned column">
+                {{ text-component/font-size }}
+            </div>
+        </div>
+  </div>
 </div>
-
