--- a/frontend/app/templates/components/background-component/image-component.hbs
+++ b/frontend/app/templates/components/background-component/image-component.hbs
@@ -1,5 +1,5 @@
 <div class="field">
     <label>Upload Background Image</label>
-    <input name="bg-image" type="file" accept="image/*">
+    <input name="bg-image" onchange={{action "encodeImage"}} type="file" accept="image/*">
 </div>
 
