Added Support for Text Customization Components

--- a/frontend/app/templates/components/text-component/font-color.hbs
+++ b/frontend/app/templates/components/text-component/font-color.hbs
@@ -1,4 +1,4 @@
 <div class="field">
     <label>Select font color</label>
-    {{col-pick-input value=deftextColor}}
+    {{col-pick-input value=defFontColor}}
 </div>
