Fixes #895 : Extending APIError class for errors in frontend.

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -52,4 +52,7 @@
         </div>
   </div>
   <button {{action "submitForm"}} class="ui button">Submit form</button>
+  {{#each userError as |error|}}
+    <p>{{error.message}}</p>
+  {{/each}}
 </div>
